Complete first header design, html and css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <title>My Website</title>
   </head>
   <body>
-    <h1>Hello World! </h1>
+    <div id="header">
+      <div id="header-title">
+        landon
+        <br>
+        skinner
+      </div>
+      <div id="header-subtitle">
+        <a href="#">software engineer*</a>
+      </div>
+        <div id="header-navigation">
+          <ul>
+            <li><a href="#">about me</a></li>
+            <li><a href="#">my projects</a></li>
+            <li><a href="#">contact me</a></li>
+          </ul>
+        </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
