Content and styling for about me section, html and css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
           </ul>
         </div>
     </div>
+    <div id="intro">
+      welcome to my first website!
+    </div>
+    <div id="intro-text">
+      <img src="photos/gradpic.jpg" alt="Photo of me!">
+      <div>about me</div>
+      <p>
+        Hello! I'm Landon Skinner from Austin, Texas. I recently graduated from
+        Villanova University in May 2021 with a B.S. in Chemical Engineering. I've 
+        recently completed the Flatiron School's pre-work curriculum for the upcoming
+        15-week bootcamp in Software Engineering. My final project for the pre-work section
+        is using my new skills in HTML, CSS, and JavaScript to design my very own 
+        website.
+        </p>
+        <p>
+        My goal for creating this site is to introduce myself both inside and outside
+        of a software engineering setting. I hope for you to learn more about who I am,
+        and I aim to document my progress throughout my bootcamp experience.
+      </p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
