Favs and photo section, html css and js

--- a/index.html
+++ b/index.html
@@ -43,6 +43,32 @@
         </p>
       </div>
     </div>
+    <div id="interest-text">
+        <div>my favorite things</div>
+        <ul>
+          <li>Tex-Mex, sushi, and anything with carbs</li>
+          <li>My dogs, Ranger and Bentley</li>
+          <li>30-minute power naps</li>
+          <li>RuPaul's Drag Race</li>
+          <li>My family</li>
+          <li>Hiking</li>
+        </ul>
+    </div>
+    <div id="photo-section">
+      <table>
+        <tr>
+          <td><img src="photos/bentley.jpg" alt="Bentley" id="photo1"></td>
+          <td><img src="photos/family.JPG" alt="Family" id="photo3"></td>
+          <td><img src="photos/hiking.jpg" alt="Hiking" id="photo2"></td>
+        </tr>
+        <tr>
+          <td><img src="photos/food.jpg" alt="Food" id="photo4"></td>
+          <td><img src="photos/ranger.jpeg" alt="Ranger" id="photo5"></td>
+          <td><img src="photos/drag.jpg" alt="Drag" id="photo6"></td>
+        </tr>
+      </table>
+      
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
