Added footer and social links, html and css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </ul>
         </div>
     </div>
-    <div id="intro">
+    <div class="intro">
       welcome to my first website!
     </div>
     <div id="intro-text">
@@ -57,17 +57,33 @@
     <div id="photo-section">
       <table>
         <tr>
-          <td><img src="photos/bentley.jpg" alt="Bentley" id="photo1"></td>
-          <td><img src="photos/family.JPG" alt="Family" id="photo3"></td>
-          <td><img src="photos/hiking.jpg" alt="Hiking" id="photo2"></td>
+          <td><img src="photos/bentley.jpg" alt="Bentley" title="Bentley" id="photo1"></td>
+          <td><img src="photos/family.JPG" alt="Family" title="My Siblings and I" id="photo3"></td>
+          <td><img src="photos/hiking.jpg" alt="Hiking" title="Hike at Lake Georgetown" id="photo2"></td>
         </tr>
         <tr>
-          <td><img src="photos/food.jpg" alt="Food" id="photo4"></td>
-          <td><img src="photos/ranger.jpeg" alt="Ranger" id="photo5"></td>
-          <td><img src="photos/drag.jpg" alt="Drag" id="photo6"></td>
+          <td><img src="photos/food.jpg" alt="Food" title="Yummy Sushi" id="photo4"></td>
+          <td><img src="photos/ranger.jpeg" alt="Ranger" title="Ranger" id="photo5"></td>
+          <td><img src="photos/drag.jpg" alt="Drag" title="Katya and I" id="photo6"></td>
         </tr>
       </table>
-      
+    </div>
+    <div class="intro">
+      that is all for now... stay tuned for updates!
+    </div>
+    <div id="footer">
+      <hr>
+      <div id="footer-content">
+        connect with me!
+        <table>
+          <tr>
+            <td><a href="https://www.linkedin.com/in/landon-skinner/" target="_blank"><img src="photos/socials/linkedin.png" alt="LinkedIn" title ="LinkedIn" id="photoLinkedIn"></a></td>
+            <td><a href="https://github.com/landonskinner" target="_blank"><img src="photos/socials/github.png" alt="GitHub" title="GitHub" id="photoGitHub"></a></td>
+            <td><a href="https://www.instagram.com/landon.skinner/" target="_blank"><img src="photos/socials/instagram.png" alt="Instagram" title="Instagram" id="photoInstagram"></a></td>
+            <td><a href="mailto: landonjskinner@gmail.com" target="_blank"><img src="photos/socials/email.png" alt="Email" title="Email" id="photoEmail"></a></td>
+          </tr>
+        </table>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
