--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </div>
         <div id="header-navigation">
           <ul>
-            <li><a href="#">about me</a></li>
-            <li><a href="#">my projects</a></li>
-            <li><a href="#">contact me</a></li>
+            <li><a href="index.html">home</a></li>
+            <li><a href="projects.html">my projects</a></li>
+            <li><a href="contact.html">contact me</a></li>
           </ul>
         </div>
     </div>
